# FMFI-Schedule

./: CMakeLists.txt  README.md
src/entities/: Admin.cpp  Admin.h  Event.cpp  Event.h  Person.cpp  Person.h  Predmet.cpp  Predmet.h  User.cpp  User.h
src/managers/: EventManager.cpp  EventManager.h  PersonManager.h  PredmetManager.cpp  PredmetManager.h
src/tests/: test.cpp
src/utilities/: Date.cpp  Date.h
